--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/FeedBack/Feedbackcshtml.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/FeedBack/Feedbackcshtml.cshtml
@@ -132,7 +132,7 @@
 </style>
 
 <h2>顧客滿意度調查</h2>
-<p class="container">本問卷蒐集之資訊僅作為內部服務改善使用，</br>絕不外洩或另作其他用途，敬請放心填寫。</p>
+<p class="container">本問卷蒐集之資訊僅作為內部服務改善使用，<br>絕不外洩或另作其他用途，敬請放心填寫。</p>
 <div class="container col-10 col-xl-6 check-area" id="d1" v-cloak>
     <div class="inputform">
         <template v-if="memberInfo.memberName == '訪客' ">
