--- a/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
@@ -1,30 +1,6 @@
-<<<<<<< Updated upstream
-﻿@section Styles {
-	<link href="~/css/menustyle.css" rel="stylesheet" />
-}
-<!-- ======= Menu Section ======= -->
-        <div class="section-title">
-            <h2>Menu</h2>
-            <p>Check Our Tasty Menu</p>
-        </div>
-
-<section id="menuItem" class="menu section-bg">
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-            <div class="col-lg-12 d-flex justify-content-center">
-                <ul id="menu-flters">
-                    <li data-filter="*" class="filter-active">All</li>
-                    <li data-filter=".filter-starters">Starters</li>
-                    <li data-filter=".filter-salads">Salads</li>
-                    <li data-filter=".filter-specialty">Specialty</li>
-                </ul>
-            </div>
-        </div>
-=======
-﻿@model IEnumerable<EnjoyEat.Models.ViewModel.MenuViewModel>
 @section Styles {
-    <link href="~/css/menustyle.css" rel="stylesheet" />
-    <link href="~/font-awesome/css/all.min.css" rel="stylesheet" />
-} 
+        <link href="~/css/menustyle.css" rel="stylesheet" />
+}
 <!-- ======= Menu Section ======= -->
 <div class="section-title">
     <h2>Menu</h2>
@@ -45,71 +21,16 @@
             </ul>
         </div>
     </div>
->>>>>>> Stashed changes
 </section>
 
 <section id="menu" class="menu section-bg">
     <div class="menuDetail" data-aos="fade-up">
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-<<<<<<< Updated upstream
 
-            <div class="col-lg-6 menu-item filter-starters">
-                <img src="~/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Lobster Bisque</a><span>$5.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-specialty">
-                <img src="~/img/menu/bread-barrel.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Bread Barrel</a><span>$6.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-starters">
-                <img src="~/img/menu/cake.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Crab Cake</a><span>$7.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-salads">
-                <img src="~/img/menu/caesar.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Caesar Selections</a><span>$8.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-specialty">
-                <img src="~/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Tuscan Grilled</a><span>$9.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Grilled chicken with provolone, artichoke hearts, and roasted red pesto
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-starters">
-=======
             <div class="col-lg-6 menu-item filter-appetizer">
-                <i class="fa-solid fa-crown"></i>
                 <img src="~/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
                 <div class="menu-content">
-                    <a href="#">@Html.DisplayNameFor(model => model.ProductName)</a><span>$150</span>
+                    <a href="#">蘆筍沙拉</a><span>$150</span>
                 </div>
                 <div class="menu-ingredients">
                     蘆筍、水煮蛋、黃瓜、蛋黃醬
@@ -157,7 +78,6 @@
             </div>
 
             <div class="col-lg-6 menu-item filter-appetizer">
->>>>>>> Stashed changes
                 <img src="~/img/menu/mozzarella.jpg" class="menu-img" alt="">
                 <div class="menu-content">
                     <a href="#">Mozzarella Stick</a><span>$4.95</span>
@@ -167,11 +87,7 @@
                 </div>
             </div>
 
-<<<<<<< Updated upstream
-            <div class="col-lg-6 menu-item filter-salads">
-=======
             <div class="col-lg-6 menu-item filter-soups">
->>>>>>> Stashed changes
                 <img src="~/img/menu/greek-salad.jpg" class="menu-img" alt="">
                 <div class="menu-content">
                     <a href="#">Greek Salad</a><span>$9.95</span>
@@ -181,11 +97,7 @@
                 </div>
             </div>
 
-<<<<<<< Updated upstream
-            <div class="col-lg-6 menu-item filter-salads">
-=======
             <div class="col-lg-6 menu-item filter-soups">
->>>>>>> Stashed changes
                 <img src="~/img/menu/spinach-salad.jpg" class="menu-img" alt="">
                 <div class="menu-content">
                     <a href="#">Spinach Salad</a><span>$9.95</span>
@@ -195,11 +107,7 @@
                 </div>
             </div>
 
-<<<<<<< Updated upstream
-            <div class="col-lg-6 menu-item filter-specialty">
-=======
             <div class="col-lg-6 menu-item filter-mainMeal">
->>>>>>> Stashed changes
                 <img src="~/img/menu/lobster-roll.jpg" class="menu-img" alt="">
                 <div class="menu-content">
                     <a href="#">Lobster Roll</a><span>$12.95</span>
@@ -208,99 +116,6 @@
                     Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
                 </div>
             </div>
-<<<<<<< Updated upstream
-        </div>
-    </div>
-    <div class="menuTop" data-aos="fade-up">
-        <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-            <div class="col-lg-6 menu-item filter-starters">
-                <img src="~/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Lobster Bisque</a><span>$5.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-specialty">
-                <img src="~/img/menu/bread-barrel.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Bread Barrel</a><span>$6.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-            </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-starters">
-                <img src="~/img/menu/cake.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Crab Cake</a><span>$7.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-                </div>
-        </div>
-
-            <div class="col-lg-6 menu-item filter-salads">
-                <img src="~/img/menu/caesar.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Caesar Selections</a><span>$8.95</span>
-    </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-specialty">
-                <img src="~/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Tuscan Grilled</a><span>$9.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Grilled chicken with provolone, artichoke hearts, and roasted red pesto
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-starters">
-                <img src="~/img/menu/mozzarella.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Mozzarella Stick</a><span>$4.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Lorem, deren, trataro, filede, nerada
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-salads">
-                <img src="~/img/menu/greek-salad.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Greek Salad</a><span>$9.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Fresh spinach, crisp romaine, tomatoes, and Greek olives
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-salads">
-                <img src="~/img/menu/spinach-salad.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Spinach Salad</a><span>$9.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
-                </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-specialty">
-                <img src="~/img/menu/lobster-roll.jpg" class="menu-img" alt="">
-                <div class="menu-content">
-                    <a href="#">Lobster Roll</a><span>$12.95</span>
-                </div>
-                <div class="menu-ingredients">
-                    Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
-=======
 
             <div class="col-lg-6 menu-item filter-beverage">
                 <img src="~/img/menu/lobster-roll.jpg" class="menu-img" alt="">
@@ -318,7 +133,7 @@
             <div class="col">
                 <img src="~/img/specials-1.png" class="imgTopten" alt="...">
                 <div class="menu">
-                    <h4>① 蘆筍沙拉</h4><h4>$150</h4>
+                    <h4><i class="fa-solid fa-crown"></i>蘆筍沙拉</h4><h4>$150</h4>
                 </div>
             </div>
         </div>
@@ -379,23 +194,12 @@
                 <img src="~/img/specials-1.png" class="imgTopten" alt="...">
                 <div class="menu">
                     <h4>① 蘆筍沙拉</h4><h4>$150</h4>
->>>>>>> Stashed changes
                 </div>
             </div>
         </div>
     </div>
-<<<<<<< Updated upstream
-    
-</section>
-            <!-- ======= Menu Section End ======= -->
-@section Scripts {
-    <script></script>
-}
-=======
 </section>
 <!-- ======= Menu Section End ======= -->
 @section Scripts {
-    <script></script>
+            <script></script>
 }
-                                                        
->>>>>>> Stashed changes
