--- a/EnjoyEat/EnjoyEat/Views/ContactUs/ContactUs.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/ContactUs/ContactUs.cshtml
@@ -3,20 +3,17 @@
 }
 <main id="main">
     <!-- ======= Contact Section ======= -->
-    <section id="about" class="about">
+    <section class="contact">
         <div class="container" data-aos="fade-up">
-            <section id="contact" class="contact">
-                <div class="section-title" data-aos="fade-up">
+            <div class="section-title" data-aos="fade-up">
                     <h2>店家資訊</h2>
-
                 </div>
-                <div data-aos="fade-up">
+                <div data-aos="fade-up" id="storeLocal">
                     <div class="row mt-5" id="enjoyEatLocation">
-                        <iframe style="border: 0; width: 45%; height: 350px"
+                        <iframe style="border: 0; width: 50%; height: 350px"
                                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
                                 frameborder="0"
                                 allowfullscreen></iframe>
-
                         <div class="col-lg-4" id="enjoyEatInformation">
                             <div class="info">
                                 <div class="address">
@@ -49,23 +46,14 @@
                         </div>
                     </div>
                 </div>
+             </div>
                 <div class="content section-title" id="customerComment">
                     <h2>顧客服務</h2>
                     <br />
-                    <h3 id="contactQuestion">為追求高水準的服務品質，我們重視每位貴賓的寶貴意見，若您有任何問題或建議，歡迎填寫以下表單與我們聯絡，我們將盡速爲您回覆，謝謝！</h3>
+                    <p id="contactQuestion">為追求高水準的服務品質，我們重視每位貴賓的寶貴意見，若您有任何問題或建議，歡迎填寫以下表單與我們聯絡，我們將盡速爲您回覆，謝謝！</p>
                 </div>
                 <div class="row">
-                    <!-- <div
-                      class="col-lg-6 order-1 order-lg-2"
-                      data-aos="zoom-in"
-                      data-aos-delay="100"
-                    >
-                      <div class="about-img">
-                        <img src="assets/img/about.jpg" alt="" />
-                      </div>
-                    </div> -->
-
-                    <div class="content" id="contactUs">
+                    <div class="content" id="contactUsForm">
                         <div class="col-lg-10 mt-5 ">
                             <form action="forms/contact.php"
                                   method="post"
@@ -89,7 +77,7 @@
                                                required />
                                     </div>
                                     <div class="col-md-6 form-group">
-                                        <input type="phone"
+                                        <input type="number"
                                                name="phone"
                                                class="form-control"
                                                id="phone"
@@ -130,12 +118,12 @@
                                     <div class="text-center">
                                         <button type="submit">送出</button>
                                     </div>
+                                </div>
                             </form>
                         </div>
                     </div>
                 </div>
-        </div>
-    </section>
+</section>
 </main>
     <!-- End Contact Section -->
 @section Scripts
